fix hoax.live to hoaxwars.live, add cname

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Settings
-name: HOAX.LIVE
-title: HOAX.LIVE 
+name: HOAXWARS.LIVE
+title: HOAXWARS.LIVE 
 description: The Official Site for Hoax Wars LIVE 
 tags:
   - blog
