--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ menu:
     url: /feed.xml
 email: hoaxwars@protonmail.com 
 # See: https://disqus.com/
-disqus_username: disqus_username
+disqus_username: hoaxwars
 # Contact Form Setting
 # See: https://formspree.io/
 formspree_form_id: formspree_form_id
@@ -25,12 +25,11 @@ formspree_form_id: formspree_form_id
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: github_username
-facebook_username: facebook_username
-twitter_username: twitter_username
-instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
+# github_username: github_username
+# facebook_username: facebook_username
+instagram_username: larpwave
+# linkedin_username: linkedin_username
+# medium_username: medium_username
 
 
 # Posts Settings
